@@ -2,19 +2,17 @@ package org.example.paneljavafx.service;
 
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
-import org.example.paneljavafx.data.GestorDataSource;
+import org.example.paneljavafx.dao.GestorDAO;
+import org.example.paneljavafx.dao.impl.GestorImpl;
 import org.example.paneljavafx.model.Cliente;
 import org.example.paneljavafx.model.Gestor;
 import org.example.paneljavafx.model.Transaccion;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class GestorService {
 
-    // =========================
-    // SINGLETON
-    // =========================
+    private final ClienteService clienteService = ClienteService.getInstance();
     private static final GestorService INSTANCE = new GestorService();
 
     public static GestorService getInstance() {
@@ -24,14 +22,17 @@ public class GestorService {
     private GestorService() {}
 
     // =========================
-    // STATE
+    // DAO (implementación concreta)
     // =========================
-    private boolean loaded = false;
+    private final GestorDAO gestorDAO = new GestorImpl();
 
-    private final GestorDataSource gestorDataSource = new GestorDataSource();
-
+    // =========================
+    // STATE UI
+    // =========================
     private final ObservableList<Gestor> gestores =
             FXCollections.observableArrayList();
+
+    private boolean loaded = false;
 
     // =========================
     // LOAD
@@ -41,42 +42,33 @@ public class GestorService {
         if (loaded) return;
         loaded = true;
 
-        List<Gestor> loadedData = gestorDataSource.load();
-
-        gestores.setAll(loadedData);
-
-        gestorDataSource.printGestoresDetallado(gestores);
-
+        gestores.setAll(gestorDAO.findAll());
     }
 
     // =========================
-    // GET ALL
+    // GETTERS
     // =========================
     public ObservableList<Gestor> getAll() {
         return gestores;
     }
 
     public Gestor getById(int id) {
-
-        return gestores.stream()
-                .filter(g -> g.getIdGestor() == id)
-                .findFirst()
-                .orElse(null);
+        return gestorDAO.findById(id);
     }
 
     // =========================
-    // CLIENTES POR GESTOR ID
+    // BUSINESS LOGIC
     // =========================
-    public List<Cliente> getClientesByGestorId(int gestorId, List<Cliente> allClientes) {
 
-        return allClientes.stream()
+    public List<Cliente> getClientesByGestorId(int gestorId, List<Cliente> clientes) {
+        return clientes.stream()
                 .filter(c -> c.getIdGestor() == gestorId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public double calcularPatrimonioGestionado(int gestorId, List<Cliente> allClientes) {
+    public double calcularPatrimonioGestionado(int gestorId, List<Cliente> clientes) {
 
-        return allClientes.stream()
+        return clientes.stream()
                 .filter(c -> c.getIdGestor() == gestorId)
                 .flatMap(c -> c.getPosiciones().stream())
                 .flatMap(p -> p.getTransacciones().stream())
@@ -86,9 +78,7 @@ public class GestorService {
 
     public List<Gestor> search(String query) {
 
-        if (query == null || query.isBlank()) {
-            return gestores;
-        }
+        if (query == null || query.isBlank()) return gestores;
 
         String q = query.toLowerCase();
 
@@ -97,21 +87,30 @@ public class GestorService {
                         g.getNombre().toLowerCase().contains(q) ||
                                 g.getApellidos().toLowerCase().contains(q) ||
                                 g.getEmail().toLowerCase().contains(q) ||
-                                g.getPerfilRiesgo().toLowerCase().contains(q)
+                                g.getPerfilRiesgo().name().contains(q.toUpperCase())
                 )
                 .toList();
     }
 
-    public boolean existsEmail(String email) {
+    public int countClientsByGestor(int gestorId) {
 
-        return gestores.stream()
-                .anyMatch(g -> g.getEmail().equalsIgnoreCase(email));
+        return clienteService.getAll() == null
+                ? 0
+                : (int) clienteService.getAll().stream()
+                .filter(c -> c.getIdGestor() != null)
+                .filter(c -> c.getIdGestor() == gestorId)
+                .count();
     }
 
-    public long countByPerfil(String perfil) {
+    public Gestor getGestorWithLessClients() {
 
         return gestores.stream()
-                .filter(g -> g.getPerfilRiesgo().equalsIgnoreCase(perfil))
-                .count();
+                .min((g1, g2) ->
+                        Integer.compare(
+                                countClientsByGestor(g1.getIdGestor()),
+                                countClientsByGestor(g2.getIdGestor())
+                        )
+                )
+                .orElse(null);
     }
 }
